--- a/index.html
+++ b/index.html
@@ -502,8 +502,8 @@
             // Use high-quality photos for the best effect.
             // If photos are local, specify the path: 'images/photo1.jpg'
             const images = [
-                'photo/SAM_0027.JPG', // For example, wedding photo
-                'photo/SAM_003220.JPG', // Photo of them young
+                'Photo/SAM_0027.JPG', // For example, wedding photo
+                'Photo/SAM_003220.JPG', // Photo of them young
                 'https://via.placeholder.com/800x500/ad1457/ffffff?text=Oila+Arxivi', // Family photo
                 'https://via.placeholder.com/800x500/880e4f/ffffff?text=So%27nggi+Yillar' // Modern photo
             ];
