--- a/index.html
+++ b/index.html
@@ -502,8 +502,8 @@
             // Use high-quality photos for the best effect.
             // If photos are local, specify the path: 'images/photo1.jpg'
             const images = [
-                'photo/SAM_0027.JPG', // For example, wedding photo
-                'photo/SAM_003220.JPG', // Photo of them young
+                'image/SAM_0027.JPG', // For example, wedding photo
+                'image/SAM_003220.JPG', // Photo of them young
             ];
             let currentImageIndex = 0;
 
